GNOME Bugzilla – Bug 693357
network: fix some alignment issues
Last modified: 2013-02-11 16:44:09 UTC
See attached patch
Created attachment 235442 [details] [review] network: fix some alignment issues If you click the sections in the left side treeview, some of the elements in the right page headers will move a couple of pixels. Also, since the WPAD warning label was always visible, the alignment of the controls section in the Proxy page was suboptimal.
Created attachment 235450 [details] [review] network: add some spacing between rows In the IPv4/IPv6 pages the grid packing address controls has no spacing at all.
Created attachment 235452 [details] [review] network: unfuzzy symbolic buttons and make them square Use the 'image-button' style class to make symbolic buttons square (as supported by latest Adwaita), and make sure to use the correct icon size for all symbolics to avoid fuzzyness.
Review of attachment 235442 [details] [review]: Looks good.
Review of attachment 235450 [details] [review]: ++
Review of attachment 235452 [details] [review]: ++
Attachment 235442 [details] pushed as c0242f2 - network: fix some alignment issues Attachment 235450 [details] pushed as 2acd6a5 - network: add some spacing between rows Attachment 235452 [details] pushed as 0969b36 - network: unfuzzy symbolic buttons and make them square