network: fix some alignment issues

If you click the sections in the left side treeview, some of the
elements in the right page headers will move a couple of pixels.
Also, since the WPAD warning label was always visible, the alignment of
the controls section in the Proxy page was suboptimal.

https://bugzilla.gnome.org/show_bug.cgi?id=693357